// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`declare-ticket-rule-form Renders \`declare-ticket-rule-form\` with custom props 1`] = `
<div
  class="v-tabs v-tabs--centered theme--light"
>
  <div
    class="v-item-group theme--light v-slide-group v-tabs-bar v-tabs-bar--is-mobile primary--text"
    role="tablist"
  >
    <div
      class="v-slide-group__prev v-slide-group__prev--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
    <div
      class="v-slide-group__wrapper"
    >
      <div
        class="v-slide-group__content v-tabs-bar__content"
      >
        <div
          class="v-tabs-slider-wrapper"
          style="transition: none;"
        >
          <div
            class="v-tabs-slider primary"
          />
        </div>
        <div
          aria-selected="true"
          class="v-tab v-tab--active"
          role="tab"
          tabindex="0"
        >
    General
        </div>
        <div
          aria-selected="false"
          class="v-tab"
          role="tab"
          tabindex="0"
        >
    Pattern
        </div>
        <div
          aria-selected="false"
          class="v-tab"
          role="tab"
          tabindex="0"
        >
          Test query
        </div>
      </div>
    </div>
    <div
      class="v-slide-group__next v-slide-group__next--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
  </div>
  <div
    class="v-window v-item-group theme--light v-tabs-items"
  >
    <div
      class="v-window__container"
    >
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        >
          <declare-ticket-rule-general-form-stub
            class="mt-2"
            form="[object Object]"
          />
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        >
          <declare-ticket-rule-patterns-form-stub
            class="mt-2"
            form="[object Object]"
          />
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <!---->
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`declare-ticket-rule-form Renders \`declare-ticket-rule-form\` with default props 1`] = `
<div
  class="v-tabs v-tabs--centered theme--light"
>
  <div
    class="v-item-group theme--light v-slide-group v-tabs-bar v-tabs-bar--is-mobile primary--text"
    role="tablist"
  >
    <div
      class="v-slide-group__prev v-slide-group__prev--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
    <div
      class="v-slide-group__wrapper"
    >
      <div
        class="v-slide-group__content v-tabs-bar__content"
      >
        <div
          class="v-tabs-slider-wrapper"
          style="transition: none;"
        >
          <div
            class="v-tabs-slider primary"
          />
        </div>
        <div
          aria-selected="true"
          class="v-tab v-tab--active"
          role="tab"
          tabindex="0"
        >
    General
        </div>
        <div
          aria-selected="false"
          class="v-tab"
          role="tab"
          tabindex="0"
        >
    Pattern
        </div>
        <div
          aria-selected="false"
          class="v-tab"
          role="tab"
          tabindex="0"
        >
          Test query
        </div>
      </div>
    </div>
    <div
      class="v-slide-group__next v-slide-group__next--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
  </div>
  <div
    class="v-window v-item-group theme--light v-tabs-items"
  >
    <div
      class="v-window__container"
    >
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        >
          <declare-ticket-rule-general-form-stub
            class="mt-2"
            form="[object Object]"
          />
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        >
          <declare-ticket-rule-patterns-form-stub
            class="mt-2"
            form="[object Object]"
          />
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <!---->
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`declare-ticket-rule-form Renders \`declare-ticket-rule-form\` with errors 1`] = `
<div
  class="v-tabs v-tabs--centered theme--light"
>
  <div
    class="v-item-group theme--light v-slide-group v-tabs-bar v-tabs-bar--is-mobile primary--text"
    role="tablist"
  >
    <div
      class="v-slide-group__prev v-slide-group__prev--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
    <div
      class="v-slide-group__wrapper"
    >
      <div
        class="v-slide-group__content v-tabs-bar__content"
      >
        <div
          class="v-tabs-slider-wrapper"
          style="transition: none;"
        >
          <div
            class="v-tabs-slider primary"
          />
        </div>
        <div
          aria-selected="false"
          class="v-tab error--text"
          role="tab"
          tabindex="0"
        >
    General
        </div>
        <div
          aria-selected="false"
          class="v-tab error--text"
          role="tab"
          tabindex="0"
        >
    Pattern
        </div>
        <div
          aria-selected="true"
          class="v-tab v-tab--active"
          role="tab"
          tabindex="0"
        >
          Test query
        </div>
      </div>
    </div>
    <div
      class="v-slide-group__next v-slide-group__next--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
  </div>
  <div
    class="v-window v-item-group theme--light v-tabs-items"
  >
    <div
      class="v-window__container"
    >
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        >
          <declare-ticket-rule-general-form-stub
            class="mt-2"
            form="[object Object]"
          />
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        >
          <declare-ticket-rule-patterns-form-stub
            class="mt-2"
            form="[object Object]"
          />
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item v-window-item--active"
        >
          <div
            class="layout"
          >
            <div
              class="flex offset-xs1 xs10"
            >
              <declare-ticket-rule-test-query-stub
                class="mt-2"
                form="[object Object]"
              />
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;
